--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -155,3 +155,5 @@
 
 
       = render partial: '/shared/footer', locals: {footer_classes: container_class_str}
+
+    = render partial: "/shared/js_templates"
