--- a/app/views/moments/_daily_verse.html.haml
+++ b/app/views/moments/_daily_verse.html.haml
@@ -15,7 +15,7 @@
       %p.moment-vod-verse
         = verse_of_today.content
 
-      = link_to(verse_of_today.human, reference_path(version: verse_of_today.version, reference: verse_of_today.usfm), class: "moment-verse-links")
+      = link_to(verse_of_today.human, reference_path(version: verse_of_today.version, reference: verse_of_today.usfm), class: "moment-vod-links")
 
       %ul.moment-vod-list
         %li.moment-vod-list-on
