adjust profile flyout menu to match notifications/requests

--- a/app/views/shared/header/_default.html.haml
+++ b/app/views/shared/header/_default.html.haml
@@ -27,6 +27,7 @@
                   %img{src: current_avatar}
               %ol#header_profile_menu
                 %li
+                  %span.arrow
                   %a{href: "/settings"}
                     =t("settings")
                 %li
