--- a/app/assets/stylesheets/_header.sass
+++ b/app/assets/stylesheets/_header.sass
@@ -101,13 +101,6 @@
   font-size: 13px
 
 
-#header nav a
-  color: #d4d4d4
-  text-decoration: none
-
-#header nav a:hover
-  color: #fff
-
 #header nav ul,
 #header nav ol,
 #header nav li
@@ -170,16 +163,25 @@
 //----------------------------------------------------------------------------------------------------
 
 #header_profile_menu
-  +border-bottom-radius(4px)
-  background: #000
+  +border-radius(5px)
+  background: #fff
   display: none
   line-height: 1
   padding-bottom: 5px
   position: relative
   z-index: 1
+  border: 1px solid #d4d4d4
+  -moz-box-shadow: 0px 0px 8px #222
+  -webkit-box-shadow: 0px 0px 8px #222
+  box-shadow: 0px 0px 8px #222  
+
+#header #header_profile_menu .arrow
+  left: 63px
 
 .li_active #header_profile_menu
   display: block
+  margin-top: 8px
+  position: relative
 
 #header_profile_menu a
   background:
