--- a/app/views/moments/_bookmark.html.haml
+++ b/app/views/moments/_bookmark.html.haml
@@ -5,6 +5,8 @@
   -# !the content of the moment
   .moment-top
     .moment-bm
+      %span.moment-icon
+        &nbsp;
       %span.moment-avatar
         = image_tag avatar.url
       %span.moment-time
