--- a/app/views/moments/_daily_verse.html.haml
+++ b/app/views/moments/_daily_verse.html.haml
@@ -3,6 +3,8 @@
 .moment
   .moment-top
     .moment-vod
+      %span.moment-icon
+        &nbsp;
       .moment-vod-calendar
         .moment-vod-calendar-date
           = verse_of_today.week_day
