--- a/app/views/moments/_friendship.html.haml
+++ b/app/views/moments/_friendship.html.haml
@@ -7,6 +7,8 @@
 .moment
   .moment-top
     .moment-fr
+      %span.moment-icon
+        &nbsp;
       %span.moment-avatar
         = image_tag avatar.url
       %span.moment-time
