--- a/app/views/moments/_generic.html.haml
+++ b/app/views/moments/_generic.html.haml
@@ -2,6 +2,8 @@
   -# !the content of the moment
   .moment-top
     .moment-sys
+      %span.moment-icon
+        &nbsp;
       %span.moment-time
         = api_dt_time_ago(moment.created_dt)
       %p.moment-sys-text
