--- a/app/views/moments/_highlight.html.haml
+++ b/app/views/moments/_highlight.html.haml
@@ -4,6 +4,8 @@
 .moment
   .moment-top
     .moment-hi
+      %span.moment-icon
+        &nbsp;
       %span.moment-avatar
         = image_tag avatar.url
       %span.moment-time
