--- a/app/views/moments/_system.html.haml
+++ b/app/views/moments/_system.html.haml
@@ -2,7 +2,8 @@
   -# !the content of the moment
   .moment-top
     .moment-sys
-
+      %span.moment-icon
+        &nbsp;
       %span.moment-time
         = api_dt_time_ago(moment.created_dt)
 
