--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -245,8 +245,15 @@
 
   .moment-no
 
+    .moment-time
+      padding: 17px 0 5px 0
+
+    .moment-no-refs
+      margin: 40px 0 0
+
     .moment-no-note-title
       line-height: 1em
+      margin: 15px 0 0
 
     .moment-no-note-text
       background: none
