Commenting new moment partials.

--- a/app/views/moments/_actions_bar.html.haml
+++ b/app/views/moments/_actions_bar.html.haml
@@ -1,3 +1,7 @@
+:ruby
+  # Locals Parameters
+  # moment - a single Moment object  (Bookmark, Highlight, Note)
+
 .moment-actions
   %span.moment-actions-share
     %a{href:"#", title: t("moments.action.share title")}
