--- a/app/views/moments/_generic.html.haml
+++ b/app/views/moments/_generic.html.haml
@@ -1,3 +1,8 @@
+:ruby
+  # Locals Parameters
+  # moment - a single Moment to display  (Bookmark, Highlight, Note)
+  # comments_displayed - boolean, true or false (whether or not to display comments when rendering html)
+
 .moment
   -# !the content of the moment
   .moment-top
