--- a/app/views/moments/_bookmark.html.haml
+++ b/app/views/moments/_bookmark.html.haml
@@ -1,5 +1,11 @@
-- avatars = moment.avatars
-- avatar = avatars.lg_avatar
+:ruby
+  # Locals Parameters
+  # moment - a single Moment to display  (Bookmark, Highlight, Note)
+  # comments_displayed - boolean, true or false (whether or not to display comments when rendering html)
+
+
+  avatars = moment.avatars
+  avatar = avatars.lg_avatar
 
 .moment
   -# !the content of the moment
