--- a/app/views/moments/_comments.html.haml
+++ b/app/views/moments/_comments.html.haml
@@ -1,3 +1,8 @@
+:ruby
+  # Locals Parameters
+  # moment - a single Moment object  (Bookmark, Highlight, Note)
+  # comments_displayed - boolean, true or false (whether or not to display comments when rendering html)
+
 .moment-comments{class: comments_displayed ? "" : "hide"}
   - if moment.commenting and moment.comments
     - if moment.comments_count.to_i > 3
