--- a/app/views/moments/_friendship.html.haml
+++ b/app/views/moments/_friendship.html.haml
@@ -1,7 +1,13 @@
-- avatars = moment.avatars
-- avatar = avatars.lg_avatar
-- friend = moment.friend
-- friend_avatar = friend.avatars.lg_avatar
+:ruby
+  # Locals Parameters
+  # moment - a single Moment to display  (Bookmark, Highlight, Note)
+  # comments_displayed - boolean, true or false (whether or not to display comments when rendering html)
+
+
+  avatars = moment.avatars
+  avatar = avatars.lg_avatar
+  friend = moment.friend
+  friend_avatar = friend.avatars.lg_avatar
 
 
 .moment
