--- a/app/views/moments/_note.html.haml
+++ b/app/views/moments/_note.html.haml
@@ -1,5 +1,10 @@
-- avatars = moment.avatars
-- avatar = avatars.lg_avatar
+:ruby
+  # Locals Parameters
+  # moment - a single Moment to display  (Bookmark, Highlight, Note)
+  # comments_displayed - boolean, true or false (whether or not to display comments when rendering html)
+
+  avatars = moment.avatars
+  avatar = avatars.lg_avatar
 
 .moment
   .moment-top
@@ -15,17 +20,10 @@
         - anchor_text = (moment.user_id == current_auth.user_id) ? moment.title : moment.moment_title.html_safe
         = link_to(anchor_text, moment.to_path, class: "moment-title-link")
 
-      .moment-no-refs
-        %a{href: "#", class: "moment-no-refs-link"}
-          John 3:16
-        %a{href: "#", class: "moment-no-refs-link"}
-          John 3:23
-        %a{href: "#", class: "moment-no-refs-link"}
-          Song of Solomon 3:16
-        %a{href: "#", class: "moment-no-refs-link"}
-          Acts 1:1
-        %a{href: "#", class: "moment-no-refs-link"}
-          John 2:16
+      - unless moment.references.blank?
+        .moment-no-refs
+          - moment.references.each do |ref_hash|  #{"human"=>"John 1:5", "version_id"=>1, "usfm"=>["JHN.1.5"]}
+            = link_to(ref_hash.human, reference_path(version: ref_hash.version_id, reference: ref_hash.usfm.sort.join("+")), class: "moment-no-refs-link")
 
       .moment-no-note
         %p.moment-no-note-title
