--- a/app/views/notes/show.html.haml
+++ b/app/views/notes/show.html.haml
@@ -4,4 +4,4 @@
   = render partial: "/comments/sidebar_form", locals: {moment: @note}
 
 %article.social-detail
-  = render partial: "moments/note", locals: {moment: @note, comments_displayed: true}
+  = render partial: "moments/note", locals: {moment: @note, comments_displayed: true, detail_view: true}
