Moment verses displayed.

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -332,6 +332,8 @@ body.transition .moment
   clear: both
   max-height: 250px
   overflow: hidden
+  position: relative
+  padding-bottom: 25px
 
 .moment-verse
   font: 20px "times new roman", times, serif
@@ -354,8 +356,12 @@ body.transition .moment
   font-family: "helvetica neue", sans-serif
   text-decoration: underline
   text-transform: uppercase
+  width: 100%
   display: block
-  margin-top: .5em
+  position: absolute
+  bottom: 0
+  background: #f5f4f3
+  padding: 10px 15px
 
 .moment-vod-links
   padding: 1px 7px
