--- a/app/views/shared/_js_templates.html.haml
+++ b/app/views/shared/_js_templates.html.haml
@@ -1,6 +1,6 @@
 %script#moment-verse-tmpl{type:"text/x-handlebars-template"}
   :plain
-    {{content_plain}}
+    <p class="moment-verse">{{content_plain}}</p>
     <a href="{{to_path}}" title="#{t('moments.action.go to scripture')}" class="moment-verse-link">{{human}} {{version_string}}</a>
 
 
