Style notifications page. Added page titles to desktop settings pages.

--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -14,11 +14,26 @@
   margin-bottom: 0
 
   .settings-group-item
-    margin-bottom: 2em
+    margin: 0 0 10px
+    border-bottom: 1px dotted #e1e1e1
 
     p
-      margin-bottom: 0
+      display: inline-block
+      width: 330px
+      line-height: 1.3em
+      padding: 0 18px 0 0
 
+  .settings-group-email,
+  .settings-group-mobile
+    display: inline-block
+    background-color: #f6f6f6
+    padding: 3px 10px 0 5px
+    border-radius: 5px
+    margin: 5px 5px 0 0
+
+.notification-settings-group + div
+  text-align: right
+  margin: 0 0 5px
 
 // ----------Notifications page
 
@@ -109,7 +124,7 @@ article.social-requests ul
       line-height: 12px
 
     .text-link.wide,
-    .text-wide 
+    .text-wide
       width: 100%
       border-top: 1px solid #ceced0
       background: #eeedeb
@@ -117,7 +132,7 @@ article.social-requests ul
       display: block
       padding: 12px 0px
 
-    .text-wide 
+    .text-wide
       font-size: 12px
       line-height: 12px
       font-weight: bold
@@ -137,7 +152,7 @@ article.social-requests ul
       float: right
       padding-right: 10px
 
-    .list-item.none  
+    .list-item.none
       height: 40px
 
     .list-item
