--- a/app/assets/stylesheets/mobile/_notifications.sass
+++ b/app/assets/stylesheets/mobile/_notifications.sass
@@ -19,7 +19,7 @@
   // default max-height is overridden by responsive height value set in page.js
   max-height: 296px
   overflow-x: auto
-  
+
 #header .friend-requests-btn
   background-position: 0px 9px
   left: 38px
@@ -71,6 +71,22 @@
     min-width: 0
     margin: 0
 
+// ------ Edit notifications page
 
+.notification-settings-group
+
+  p
+    display: block
+    width: auto
+    padding: 0
+    margin-bottom: 5px
+
+  .settings-group-email,
+  .settings-group-mobile
+    margin: 5px 5px 15px 0
+
+.notification-settings-group + div
+  text-align: center
+  margin: 0
 
 
