--- a/app/views/users/devices.html.haml
+++ b/app/views/users/devices.html.haml
@@ -10,6 +10,9 @@
 %article
   = render partial: "users/mobile_menu", locals: {selected: :devices}
 
+  %h1
+    Connect devices
+
   - if @results
     = render partial: "shared/form_errors", locals: {errors: @results.errors }
 
@@ -20,11 +23,11 @@
           %h4{style:"margin-bottom:0;"}= "#{d.vendor} #{d.model}"
           %p.mute{style: "float: left; width: 70%;"}
             = d.os
-          = link_to t('remove'), device_path(d.id), method: :delete, class: "action_button_blue float_right"  
+          = link_to t('remove'), device_path(d.id), method: :delete, class: "action_button_blue float_right"
           %p.mute{style: "float: left; width: 70%;"}
             = t('registered ago', time_ago: time_ago_in_words(d.created_dt))
 
-          
+
   - else
     %h2= t('users.no devices')
     %p= t('users.no devices download copy').html_safe
