--- a/app/views/users/picture.html.haml
+++ b/app/views/users/picture.html.haml
@@ -5,6 +5,9 @@
 
 %article
 
+  %h1
+    Change picture
+
   - if @results
     = render partial: "shared/form_errors", locals: {errors: @results.errors}
 
