--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -9,6 +9,9 @@
 %article
   = render partial: "users/mobile_menu", locals: {selected: :edit}
 
+  %h1
+    Edit profile
+
   = form_for @user do |f|
     - unless @user.errors.blank?
       .form_errors
