--- a/app/views/users/password.html.haml
+++ b/app/views/users/password.html.haml
@@ -9,6 +9,9 @@
 %article
   = render partial: "users/mobile_menu", locals: {selected: :password}
 
+  %h1
+    Change password
+
   = form_for :user, url: update_password_user_path(current_user), method: :put do |f|
     = render partial: "shared/form_errors", locals: {errors: @user.errors, heading: t("users.edit password errors")}
     %p
